--- a/civic_europe/templates/500.html
+++ b/civic_europe/templates/500.html
@@ -12,7 +12,7 @@
                     <img
                         class="navbar-brand-logo"
                         alt="Avocate Europe"
-                        src="{% static 'images/logo_01.svg' %}"
+                        src="{% static 'images/logo.svg' %}"
                     >
                 </a>
             </div>
