variables: variable name update from ae to ce

--- a/civic_europe/assets/scss/core/variables.scss
+++ b/civic_europe/assets/scss/core/variables.scss
@@ -9,27 +9,27 @@ $footer-screen-sm-hight: 185px;
 $navbar-height: (4.4 * 1rem);
 $navbar-underline-height: (1rem / 5);
 $navbar-default-bg: #fff !default;
-$ae-lighter-gray: #fafafa;
-$ae-light-gray: #f3f3f3;
-$ae-light-gray-shadow: #ccc;
-$ae-light-gray-darker: #e6e6e6;
-$ae-middle-gray: #999;
-$ae-dark-gray: #d8d8d8;
-$ae-font-size-extra-large: 48px;
-$ae-wizard-red: #dc3818;
-$ae-facebook: #3b5999;
-$ae-google: #dd4b39;
-$ae-instagram: #e4405f;
-$ae-github: #24292e;
-$ae-border--dark: 1px solid $ae-light-gray-shadow;
-$ae-border--light: 1px solid $ae-light-gray;
+$ce-lighter-gray: #fafafa;
+$ce-light-gray: #f3f3f3;
+$ce-light-gray-shadow: #ccc;
+$ce-light-gray-darker: #e6e6e6;
+$ce-middle-gray: #999;
+$ce-dark-gray: #d8d8d8;
+$ce-font-size-extra-large: 48px;
+$ce-wizard-red: #dc3818;
+$ce-facebook: #3b5999;
+$ce-google: #dd4b39;
+$ce-instagram: #e4405f;
+$ce-github: #24292e;
+$ce-border--dark: 1px solid $ce-light-gray-shadow;
+$ce-border--light: 1px solid $ce-light-gray;
 
-$ae-brand-orange: #d55169;
+$ce-brand-orange: #d55169;
 $brand-primary-darker: #016166;
-$ae-light-blue: rgba(1, 121, 127, 0.2); // currently only use for active blog category
-// $ae-brand-orange: #fcb813;
+$ce-light-blue: rgba(1, 121, 127, 0.2); // currently only use for active blog category
+// $ce-brand-orange: #fcb813;
 // $brand-primary-darker: #007099;
-// $ae-light-blue: rgba(0, 170, 230, 0.2); // currently only use for active blog category
+// $ce-light-blue: rgba(0, 170, 230, 0.2); // currently only use for active blog category
 
 // Which colors are used for btn-ae-secondary is defined below.
 
