--- a/civic_europe/templates/base.html
+++ b/civic_europe/templates/base.html
@@ -3,10 +3,10 @@
 
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="{{ request.LANGUAGE_CODE }}"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="{{ request.LANGUAGE_CODE }}"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="{{ request.LANGUAGE_CODE }}"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="{{ request.LANGUAGE_CODE }}"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="{{ LANGUAGE_CODE }}"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="{{ LANGUAGE_CODE }}"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="{{ LANGUAGE_CODE }}"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="{{ LANGUAGE_CODE }}"> <!--<![endif]-->
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -48,7 +48,7 @@
         <script type="text/javascript" src="{% url 'javascript-catalog' %}"></script>
         <script>
             var django = window.django || (window.django = {});
-            django.languageCode = '{{ request.LANGUAGE_CODE }}';
+            django.languageCode = '{{ LANGUAGE_CODE }}';
         </script>
         <script type="text/javascript" src="{% static 'vendor.js' %}"></script>
         <script type="text/javascript" src="{% static 'adhocracy4.js' %}"></script>
