secondary colour: lightening secondary colour for buttons and correct capitilisation on svg colour codes

--- a/civic_europe/assets/scss/core/_buttons.scss
+++ b/civic_europe/assets/scss/core/_buttons.scss
@@ -1,6 +1,6 @@
 .btn-ae-secondary {
     @include button-variant($btn-ae-secondary-bg, $btn-ae-secondary-bg, $btn-ae-secondary-border);
-    color: $btn-ae-secondary-color;
+    color: $white;
 }
 
 .btn-light-blue {
