--- a/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load widget_tweaks i18n idea_tags crispy_forms_tags static %}
 
-{% block title %} {% trans 'update idea' %} {% endblock %}
+{% block title %} {% trans 'Update idea' %} {% endblock %}
 
 {% block content %}
     <div class="wizard-page">
