everywhere: variable and colour update

--- a/apps/ideas/templates/civic_europe_ideas/idea_list.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_list.html
@@ -59,7 +59,7 @@
                     </div>
                     {% has_perm 'civic_europe_ideas.export_idea' request.user as can_export %}
                     {% if can_export %}
-                        <a class="btn btn-ae-secondary export-btn btn-wide" href="
+                        <a class="btn btn-ce-secondary export-btn btn-wide" href="
                                 {% url 'idea-export' %}{{ '?'|add:view.filter.data.urlencode }}">{% trans "export" %}</a>
                     {% endif %}
                 </div>
