--- a/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="modal-body">
                             <a id="discard" href class="btn btn-danger">{% trans "discard" %}</a>
-                            <button id="save" type="submit" class="btn btn-ae-secondary">{% trans "save" %}</button>
+                            <button id="save" type="submit" class="btn btn-ce-secondary">{% trans "save" %}</button>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
             {% crispy form %}
 
             <div class="clearfix">
-                <button class="btn btn-ae-secondary float-right"
+                <button class="btn btn-ce-secondary float-right"
                         type="submit">
                     {% trans "save" %}
                 </button>
