--- a/civic_europe/assets/scss/components/_error_pages.scss
+++ b/civic_europe/assets/scss/components/_error_pages.scss
@@ -12,7 +12,7 @@
     .fa,
     .fas,
     .far {
-        color: $ce-brand-orange;
+        color: $ce-brand-red-lighter;
     }
 
     .error-status {
