--- a/cms/home/templates/cms_home/blocks/blog_block.html
+++ b/cms/home/templates/cms_home/blocks/blog_block.html
@@ -44,7 +44,7 @@
         {% if value.link.live %}
             <div class="row text-center">
                 <div class="col-md-12">
-                    <a href={{ value.link.url }} class="btn btn-ae-secondary blockblog-btn" role="button">{% trans 'More' %}</a>
+                    <a href={{ value.link.url }} class="btn btn-ce-secondary blockblog-btn" role="button">{% trans 'More' %}</a>
                 </div>
             </div>
         {% endif %}
