--- a/cms/home/templates/cms_home/blocks/call_to_action_block.html
+++ b/cms/home/templates/cms_home/blocks/call_to_action_block.html
@@ -2,7 +2,7 @@
     <div class="container text-center">
         <div class="container-medium">
             <h2 class="block-cta-title">{{ value.headline }}</h2>
-            <a href="{{ value.link.link }}" class="btn btn-ae-secondary block-cta-btn" >
+            <a href="{{ value.link.link }}" class="btn btn-ce-secondary block-cta-btn" >
                 <span class="block-cta-linktext">{{ value.link.link_text }}</span>
             </a>
             <p class="block-cta-text">{{ value.text }}</p>
