--- a/apps/ideas/templates/civic_europe_ideas/includes/call_to_action_tile.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/call_to_action_tile.html
@@ -15,5 +15,5 @@
             {% endif %}
         </div>
     </div>
-    <a class="btn btn-ae-secondary call-to-action-btn" href="{% url 'idea-create' module.slug %}">{% trans "Create your idea!" %}</a>
+    <a class="btn btn-ce-secondary call-to-action-btn" href="{% url 'idea-create' module.slug %}">{% trans "Create your idea!" %}</a>
 </div>
