--- a/apps/invites/templates/civic_europe_invites/invite_detail.html
+++ b/apps/invites/templates/civic_europe_invites/invite_detail.html
@@ -1,5 +1,5 @@
 {% extends "civic_europe_invites/invite_base.html" %}
 {% load i18n %}
 {% block invite_action %}
-<a class="btn btn-ae-secondary" href="{% url 'account_login' %}?next={% url 'ideainvite-detail' invite_token=object.token %}">{% trans "Proceed to login" %}</a>
+<a class="btn btn-ce-secondary" href="{% url 'account_login' %}?next={% url 'ideainvite-detail' invite_token=object.token %}">{% trans "Proceed to login" %}</a>
 {% endblock %}
