--- a/civic_europe/templates/account/email_confirm.html
+++ b/civic_europe/templates/account/email_confirm.html
@@ -19,7 +19,7 @@
                 {% endfor %}
                 </div>
             {% endif %}
-            <button type="submit" value="Activate" class="btn btn-ae-secondary">{% trans "Activate account" %}</button>
+            <button type="submit" value="Activate" class="btn btn-ce-secondary">{% trans "Activate account" %}</button>
         </form>
     {% else %}
         <h2>{% trans 'Welcome to Civic Europe!' %}</h2>
