--- a/civic_europe/templates/account/password_reset.html
+++ b/civic_europe/templates/account/password_reset.html
@@ -25,6 +25,6 @@
             {{ form.email.errors }}
             {{ form.email|add_class:"form-control" }}
         </div>
-        <button type="submit" value="reset" class="btn btn-ae-secondary">{% trans "Reset" %}</button>
+        <button type="submit" value="reset" class="btn btn-ce-secondary">{% trans "Reset" %}</button>
     </form>
 {% endblock %}
