--- a/cms/home/templates/cms_home/includes/home_hero_unit.html
+++ b/cms/home/templates/cms_home/includes/home_hero_unit.html
@@ -12,10 +12,10 @@
                     {{ description }}
                 </p>
                 {% if website %}
-                <a href="{{ website }}" target="_blank" class="btn btn-ae-secondary btn-md"><i class="fa fa-link" aria-hidden="true"></i> {{ link_text }}</a>
+                <a href="{{ website }}" target="_blank" class="btn btn-ce-secondary btn-md"><i class="fa fa-link" aria-hidden="true"></i> {{ link_text }}</a>
                 {% endif %}
                 {% if videoplayer_url %}
-                <a href="#video" class="btn btn-ae-secondary btn-md" data-toggle="modal"><i class="fa fa-play" aria-hidden="true"></i> {{ video_button_text }}</a>
+                <a href="#video" class="btn btn-ce-secondary btn-md" data-toggle="modal"><i class="fa fa-play" aria-hidden="true"></i> {{ video_button_text }}</a>
                 {% endif %}
             </div>
         </div>
