email_base: email button base colour update

--- a/civic_europe/templates/email_base.html
+++ b/civic_europe/templates/email_base.html
@@ -21,13 +21,13 @@
 
         .button {
             border-radius: 4px;
-            background-color: #fcb813;
+            background-color: #de8f9d;
             padding: 8px 12px;
             display: block;
             text-decoration: none;
             margin: 20px auto;
             font-weight: bold;
-            color: black;
+            color: white;
             width: 150px;
         }
 
