--- a/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="idealist-footer">
-        <span class="float-right">
+        <span>
             <i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ idea.created|date:"Y" }}
             <i class="far fa-heart" aria-hidden="true"></i> {{ idea.positive_rating_count }}
             <i class="far fa-comment" aria-hidden="true"></i> {{ idea.comment_count }}
