apps/ideas: style tabs and buttons below detail header - fixes #71

--- a/apps/ideas/templates/civic_europe_ideas/idea_detail.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_detail.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="row ideadetail-tab-bar">
-                <div class="col-md-8">
+                <div class="col-md-7">
                 <ul class="nav nav-tab tabs" role="tablist">
 
                     <li role="presentation" class="nav-item">
@@ -69,9 +69,9 @@
 
                 </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5 px-md-0">
                 <ul class="nav nav-tab justify-content-end">
-                    {% include 'civic_europe_ideas/includes/idea_detail_watch_btns.html' with xs_class="d-none d-sm-block" %}
+                    {% include 'civic_europe_ideas/includes/idea_detail_watch_btns.html' with xs_class="d-none d-md-block" %}
                 </ul>
                 </div>
             </div>
